@@ -4,4 +4,4 @@ use Test::More tests => 3;
 
 use_ok 'Dist::Zilla::PluginBundle::Author::Plicease';
 use_ok 'Dist::Zilla::Plugin::Author::Plicease::Init';
-use_ok 'Dist::Zilla::MintingProfile::Plicease';
+use_ok 'Dist::Zilla::MintingProfile::Author::Plicease';
