@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - rename D::Z::MP::Plicease to D::Z::MP::Author::Plicease
 
 0.92      2013-05-02 13:07:08 EST5EDT
   - add [ACPS::RPM]
